# MergerGraphNet

./: .gitignore  0_eda.ipynb  0_q_data_preprocess.ipynb  1_discriminative_word_analysis.ipynb  2_1_wordfreq.ipynb  2_3_embedding.ipynb  3_1_trainer.py  3_2_tester.py  3_3_q_trainer.py  3_4_q_tester.py  4_gemini.ipynb  5_discriminative_embedding_analaysis.ipynb  GetEmbedding.py  ML_Benchmark.ipynb  ML_Benchmark.py  MergerEmbeddings.py  MergerGraphNet.ipynb  MergerGraphNet.py  MergerSentence.ipynb  MergerSentence.py  README.md  ResultComperation.ipynb  config.yaml  databse_merger.py  deneme.ipynb  discriminative_word_analysis.ipynb  eda_reports.ipynb  embedding_approach.ipynb  pyproject.toml  tester.py  trainer.py  wf_approach.ipynb  word2vec.ipynb
data/: .gitkeep
lib/config/: config_loader.py
lib/data/: downloader.py  graph_generator.py  preprocessor.py
lib/data/preprocess/: check_length_step.py  label_data_step.py  preprocess_step.py
lib/database/: database_connector.py  q_sqlite_dataset.py  sqlite_dataset.py
lib/gemini/: gemini_chat.py  prompt_generator.py
lib/model/: graph_classifer.py  sentence_classifer.py
lib/model/not_tuned/: gobert.py  q_gobert.py  q_robert.py  q_tobert.py  robert.py  tobert.py
lib/model/tuned/: gobert.py
lib/util/: custom_data_loader.py  embedding_data_loader.py  graph_data_loader.py  graph_generator.py  graph_iterable_data_loader.py
lib/utility/: config_loader.py
outputs/: .gitkeep
